--- a/cms/web/static/output.css
+++ b/cms/web/static/output.css
@@ -726,6 +726,8 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 100%;
   align-items: center;
   justify-content: space-between;
+  -moz-column-gap: 0.75rem;
+       column-gap: 0.75rem;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 0.75rem;
@@ -736,6 +738,8 @@ h1, h2, h3, h4, h5, h6 {
   .navbar-inner {
     width: auto;
     max-width: calc(100vw - 2rem);
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
   }
 }
 
@@ -2009,6 +2013,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .underline {
   text-decoration-line: underline;
+}
+
+.navbar-hidden {
+  transform: translateY(-120%);
+  opacity: 0;
+  pointer-events: none;
 }
 
 .hover\:no-underline:hover {
